# projectlavos-backend

./: .env.example  .gitignore  CLAIM_PAGE_ULTRATHINK.md  CLAUDE.md  CLAUDE_MD_UPDATE_SUMMARY.md  CLAUDE_MD_UPDATE_ULTRATHINK.md  CLAUDE_MD_UPDATE_WEEK2_SESSION1.md  DAY_1_COMPLETE.md  DAY_1_STATUS.md  DEEP_INTEGRATION_MATRIX.md  Dockerfile.fastapi  ECOSYSTEM_INTEGRATION_ANALYSIS.md  EMAIL_NOTIFICATIONS_COMPLETION.md  EMAIL_NOTIFICATIONS_GUIDE.md  FIXES_NEEDED.md  IMMEDIATE_ACTION_PLAN.md  INTEGRATION_QUICKSTART.md  LINTING_FIX_ULTRATHINK.md  MONITORING_GUIDE.md  NEXT_SESSION.md  PHISHGUARD_PORT_COMPLETE.md  PLATFORM_ANALYSIS.md  PLATFORM_CONSOLIDATION_PLAN.md  PURPOSE_AND_BRAND.md  README.md  SESSION_FINAL_SUMMARY.md  SESSION_SUMMARY.md  STRATEGIC_DECISION_TREE.md  WEEK2_ACTIONABLE_CHECKLIST.md  WEEK2_QA_AND_REMAINING_WORK_ULTRATHINK.md  WEEK2_SESSION1_COMPLETION_ULTRATHINK.md  WEEK2_SESSION1_FINAL_SUMMARY.md  WEEK2_SESSION3_TESTING_ULTRATHINK.md  benchmark-final.py  benchmark-performance.sh  benchmark_phishing_extraction.py  cache_client.py  check_models.py  docker-compose.monitoring.yml  docker-compose.yml  (+12 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
cpp-processor/: CMakeLists.txt  Dockerfile  remove_duplicates.py
cpp-processor/src/: main.cpp  metrics.h  phishing_features.cpp  phishing_features.h  request_handler.cpp  request_handler.h
data/: sample_emails.json
monitoring/: prometheus.yml
python-ml/: Dockerfile  phishing_service.py
springboot-gateway/: Dockerfile  pom.xml
(+23 files in other folders)
